# what-you-said

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.backend  LICENSE  LINKEDIN_POST.md  README.md  check_model.py  copilot-instructions.md  docker-compose.yml  dockerfile  main.py  mypy.ini  pyproject.toml  pytest.ini  test_dispatcher.py  test_playlist.py
.agents/skills/automated-test-creator/: SKILL.md
.agents/skills/github-issue-generator/: SKILL.md
.agents/skills/secure-commit/: SKILL.md
.agents/skills/vector-store-architect/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml  frontend-quality.yml  python-tests.yml  security.yml  tests.yml
.sonarqube/: README.md  compose.yaml  scanner.py
alembic/: README.md  env.py
alembic/versions/: 04e0f5f5f0af_add_status_message_and_error_message_to_.py  07482ecc5a54_create_tables.py  0ce7f69147eb_update_unique_constraint_on_content_.py  1062951c28c7_add_ingestion_type_to_jobs.py  25bc49e441f1_add_subject_id_to_ingestion_jobs.py  31fc75e62cf8_add_status_message_to_ingestion_jobs.py  40f70fb7bb1c_add_index_to_chunk_index_and_source_.py  4c007a7c27e8_add_status_and_error_message_to_.py  4e8d4e04a288_add_external_source_to_ingestion_jobs.py  50420d500c2e_add_token_columns_to_content_source.py  5736075a22d0_add_vector_store_type_to_job_and_chunk_.py  5ff7984a3bcc_optimize_sql_models_indexes_and_audit.py  646a175ac845_add_chunk_duplicates_table_and_is_.py  6e53bc32edfe_add_subject_id_to_diarization.py  72f69987a221_rename_diarization_title_to_name.py  73f13c5ff10a_add_metadata_to_chunk_index.py  790acc587e00_add_content_column_to_chunk_index.py  84524e052673_add_content_source_id_to_duplicates.py  946d88fe08b1_add_source_metadata_to_content_source.py  a1b2c3d4e5f6_add_status_message_to_diarizations.py  a4e3eb3d951c_add_tokens_count_to_chunks.py  b2c3d4e5f6a7_add_status_to_voices.py  bd01964d9b26_created_tables.py  c16fab000f02_add_user_table.py  c48798b08031_add_voice_samples_table.py  d3b1a2c3d4e5_add_chunks_count_to_ingestion_jobs.py  d6d36d89a425_add_source_metadata_to_diarizations.py  e7509b75b129_add_icon_column_to_knowledgesubject.py  f120b614600a_add_diarizations_and_voices_tables.py
docs/: docker-deployment.md
docs/issues/: issue-duplication-tests-ux.md  issue-google-sso-auth.md
frontend/: Dockerfile  __init__.py  index.html  nginx.conf  package-lock.json  package.json  streamlit_app.py  vite.config.ts
frontend/assets/: styles.py
frontend/components/: sidebar.py  task_cards.py
frontend/dialogs/: __init__.py  add_knowledge_dialog.py  error_log_dialog.py  source_chunks_dialog.py  subject_dialog.py
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AddContentModal.tsx  AddSubjectModal.tsx  ChatView.tsx  ChunksViewer.tsx  ContextSelector.tsx  DiarizationView.tsx  DuplicatesView.tsx  EditSourceModal.tsx  ErrorBoundary.tsx  ErrorDetailModal.tsx  KnowledgeAdminView.tsx  LocalContextSelector.tsx  LoginModal.tsx  QueueMonitorView.tsx  SearchView.tsx  SettingsModal.tsx  Sidebar.tsx  SidebarContext.tsx  SourcesTable.tsx  SubjectIcon.tsx  TaskCard.tsx  ToastContainer.tsx  VoiceProfilesView.tsx
frontend/src/hooks/: useIngestion.ts
frontend/src/locales/: en.json  pt-BR.json
frontend/src/services/: api.ts
frontend/src/store/: AppContext.tsx  AuthContext.tsx
frontend/tabs/: __init__.py  activity_monitor.py  content_sources.py  diagnostics.py  search.py
frontend/utils/: ingestion_jobs.py  services.py
frontend/views/: chat.py  dashboard.py  settings.py
scripts/: clear_sql_db.py  clear_vector_db.py  dump_database.py  entrypoint.sh  migrate_vector_db.py  peek_redis.py  reset_db.py  test_search_quality_chroma.py
src/: __init__.py
src/application/: ingestion_context.py  service_registry.py  workers.py
src/application/use_cases/: auth_use_case.py  content_source_use_case.py  delete_diarization_use_case.py  diarization_ingestion_use_case.py  file_ingestion_use_case.py  generate_speaker_audio_access_url.py  identify_speakers_in_processed_audio.py  ingest_youtube_use_case.py  knowledge_subject_use_case.py  list_s3_audio_files.py  manage_voice_profiles.py  process_audio_diarization_pipeline.py  retrieve_processed_audio_history.py  search_chunks_use_case.py  search_use_case.py  web_scraping_use_case.py  youtube_ingestion_use_case.py
src/config/: logger.py  logging_config.py  settings.py  validators.py
src/domain/entities/: chunk_duplicate_entity.py  chunk_entity.py  content_source_entity.py  diarization.py  external_source_enum.py  external_source_enum_entity.py  ingestion_job_entity.py  ingestion_job_status_enum.py  knowledge_subject_entity.py  user.py  voice.py
src/domain/exception/: auth_exceptions.py  youtube_exceptions.py
src/domain/mappers/: chunk_index_mapper.py  chunk_mapper.py  content_source_mapper.py  ingestion_job_mapper.py  knowledge_subject_mapper.py
src/infrastructure/: redis_connector.py
src/infrastructure/logger/: util.py  (+1 more)
tests/: conftest.py  test_chunk_repository.py  test_embeddding_service.py  test_import_all_modules.py  test_model_loader_service.py  test_search_chunks_use_case.py  test_settings.py  test_sql_additional_coverage.py  test_sql_exception_branches.py  test_sql_repos_services.py  test_std_logger.py  test_transcript_processor.py  test_weaviate_client.py  test_weaviate_vector.py  test_youtube_data_service.py  test_youtube_extractor.py  test_youtube_text_temporal_splitter_service.py  test_youtube_text_temporal_splitter_service_unknown_mode.py  test_youtube_transcript_extractor.py  test_youtube_weaviate_service.py
tests/application/: test_audio_diarization_workers.py  test_workers.py
tests/config/: test_logger.py  test_settings.py
tests/sql/: test_additional_coverage.py  test_repos_services.py
tests/vector/: test_chunk_repository.py  test_weaviate_vector.py  test_youtube_weaviate_service.py
tests/youtube/: test_ingest_youtube_use_case.py  test_youtube_data_service.py
tmp/: cleanup_db.py
(+222 files in other folders)
