[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "what-you-said"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.7.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
    "uvicorn>=0.42.0",
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "langchain-community>=0.4.1",
    "rank-bm25>=0.2.2",
    "python-multipart>=0.0.22",
    "huggingface-hub>=0.28.0",
    "redis>=5.0.0",
    "sse-starlette>=3.3.3",
    "playwright>=1.50.1",
    "urllib3<2.0.0",
    "requests>=2.32.0",
    "chardet<6.0.0",
    "sentence-transformers>=5.2.3",
    "flashrank>=0.2.0",
    "docling>=2.80.0",
    "transformers>=4.48.0",
    "tokenizers>=0.21.0",
    "scipy>=1.15.1",
    "crawl4ai[all]>=0.4.311",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
    "whisperx>=3.8.5",
    "soundfile>=0.13.1",
    "imageio-ffmpeg>=0.6.0",
    "boto3>=1.42.82",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
chroma = [
    "chromadb>=0.4.24",
    "langchain-chroma>=0.1.0",
]
weaviate = [
    "langchain-weaviate>=0.0.6",
]
faiss = [
    "faiss-cpu>=1.13.2",
]
qdrant = [
    "qdrant-client>=1.13.2",
]
mysql = [
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
]
mariadb = [
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
]
mssql = [
    "python-tds>=1.15.0",
]
postgres = [
    "psycopg2-binary>=2.9.10",
]
gpu = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "bandit>=1.8.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    "scripts",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
